<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LocalFragment">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/dp50"
        android:layout_height="@dimen/dp50"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp20"
        android:contentDescription="@null"
        android:src="@drawable/ic_user_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp0"
        android:layout_marginStart="@dimen/dp15"
        android:drawablePadding="@dimen/dp5"
        android:gravity="center_vertical"
        android:text="@string/right_login"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp16"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintTop_toTopOf="@id/iv_avatar" />

    <View
        android:id="@+id/v_bg1"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp125"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/bg_white_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/dp6"
        android:text="@string/local_music"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp12"
        app:drawableTopCompat="@drawable/icon_local_music"
        app:layout_constraintBottom_toBottomOf="@id/v_bg1"
        app:layout_constraintEnd_toStartOf="@id/tv_recent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/v_bg1" />

    <TextView
        android:id="@+id/tv_recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/dp6"
        android:text="@string/recent_run"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp12"
        app:drawableTopCompat="@drawable/icon_recent_play"
        app:layout_constraintBottom_toBottomOf="@id/v_bg1"
        app:layout_constraintEnd_toStartOf="@id/tv_collect"
        app:layout_constraintStart_toEndOf="@id/tv_local"
        app:layout_constraintTop_toTopOf="@id/v_bg1" />

    <TextView
        android:id="@+id/tv_collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/dp6"
        android:text="@string/my_collect"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp12"
        app:drawableTopCompat="@drawable/ic_my_collect"
        app:layout_constraintBottom_toBottomOf="@id/v_bg1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_recent"
        app:layout_constraintTop_toTopOf="@id/v_bg1" />

    <View
        android:id="@+id/v_favorite"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="@dimen/dp15"
        android:background="@drawable/bg_ripple_white"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@id/v_bg1"
        app:layout_constraintStart_toStartOf="@id/v_bg1"
        app:layout_constraintTop_toBottomOf="@id/v_bg1" />

    <View
        android:id="@+id/v_sheet"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@drawable/bg_ripple_white"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@id/v_favorite"
        app:layout_constraintStart_toStartOf="@id/v_favorite"
        app:layout_constraintTop_toBottomOf="@id/v_favorite" />

    <com.aut.lexicon.view.RoundImageView
        android:layout_width="@dimen/dp60"
        android:layout_height="@dimen/dp60"
        android:layout_marginStart="@dimen/dp15"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_favorite"
        app:layout_constraintBottom_toBottomOf="@id/v_favorite"
        app:layout_constraintStart_toStartOf="@id/v_favorite"
        app:layout_constraintTop_toTopOf="@id/v_favorite"
        app:radius="6dp"
        app:shadowAlpha="0.5" />

    <com.aut.lexicon.view.RoundImageView
        android:layout_width="@dimen/dp60"
        android:layout_height="@dimen/dp60"
        android:layout_marginStart="@dimen/dp15"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_song_sheet"
        app:layout_constraintBottom_toBottomOf="@id/v_sheet"
        app:layout_constraintStart_toStartOf="@id/v_sheet"
        app:layout_constraintTop_toTopOf="@id/v_sheet"
        app:radius="6dp"
        app:shadowAlpha="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:text="我的喜欢"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/v_favorite"
        app:layout_constraintStart_toStartOf="@id/v_favorite"
        app:layout_constraintTop_toTopOf="@id/v_favorite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:text="新建/导入歌单"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/v_sheet"
        app:layout_constraintStart_toStartOf="@id/v_sheet"
        app:layout_constraintTop_toTopOf="@id/v_sheet" />

</androidx.constraintlayout.widget.ConstraintLayout>